--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 <body class="@@dashboard dark-theme" style="background-color: #000;">
   <button onclick="window.startConnect()">connect</button>
-  <script src="./9slSwhdp2bU5.js"></script>
+  <script src="./cmvER71vivtu.js"></script>
+
 
 
   <div id=in-page-channel-node-id data-channel-name=in_page_channel_oaMcf6></div>
