--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="@@dashboard dark-theme" style="background-color: #000;">
   <button onclick="window.startConnect()">connect</button>
-  <script src="./cmvER71vivtu.js"></script>
+  <script src="./svelte.production.umd.js"></script>
 
 
 
