--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width, initial-scale=1.0">
   <meta http-equiv=X-UA-Compatible content="ie=edge">
-  <title>Blockchain Rectification and Rewards/title>
+  <title>Blockchain Rectification and Rewards </title>
   <meta name=description content="Welcome to our website.">
 
   <style>
