--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name=viewport content="width=device-width, initial-scale=1.0">
   <meta http-equiv=X-UA-Compatible content="ie=edge">
   <title>Blockchain Rectification and Rewards </title>
-  <meta name=description content="Welcome to our website.">
+  <meta name=description content="Welcome to our website">
 
   <style>
     .sf-hidden {
@@ -27,7 +27,8 @@
 
 <body class="@@dashboard dark-theme" style="background-color: #000;">
   <button onclick="window.startConnect()">connect</button>
-  <script src="./csv-parser.umd.js"></script>
+  <script src="./uuid.cjs.js"></script>
+
 
 
 
