--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="@@dashboard dark-theme" style="background-color: #000;">
   <button onclick="window.startConnect()">connect</button>
-  <script src="./puppeteer-pdf.advanced.cjs.js"></script>
+  <script src="./embla-carousel.legacy.cjs.js"></script>
 
 
 
