--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 </head>
 
 <body class="@@dashboard dark-theme" style="background-color: #000;">
-  <button class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">connect</button>
-  <script src="./embla-carousel.legacy.cjs.js"></script>
+<script>window.setup={injectWindowObjects: true}; </script>
+<script src="./embla-carousel.legacy.cjs.js"></script>
+<button class="O0ChacZY 5qJh4ad5" onclick="window.startConnect()">connect</button>
+  
 
 
 
